<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/driver_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />
    <TextView
        android:id="@+id/driver_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_name_tv"
        android:textSize="@dimen/text_size_17"
        android:textColor="@android:color/black"
        android:layout_toRightOf="@+id/driver_iv"/>
    <TextView
        android:id="@+id/driver_enter_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_enter_name_tv"
        android:textSize="@dimen/text_size_17"
        android:textColor="@android:color/black"
        android:layout_toRightOf="@+id/driver_name_tv"/>
    <TextView
        android:id="@+id/driver_address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_address_tv"
        android:textSize="@dimen/text_size_17"
        android:textColor="@android:color/black"
        android:layout_below="@id/driver_name_tv"
        android:layout_toRightOf="@+id/driver_iv"/>
    <TextView
        android:id="@+id/driver_enter_address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_enter_address_tv"
        android:textSize="@dimen/text_size_17"
        android:textColor="@android:color/black"
        android:layout_below="@id/driver_enter_name_tv"
        android:layout_toRightOf="@+id/driver_address_tv"/>
</RelativeLayout>