<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/used_gray1"
    android:orientation="vertical"
    tools:context="com.click_labs.kashishnalwa.loginappassignment.Activity.SignUpActivity">

    <include layout="@layout/custom_action_bar" />

    <EditText
        android:id="@+id/enter_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_15"
        android:background="@drawable/edit_text_sel"
        android:drawableLeft="@drawable/icon_user"
        android:maxLines="1"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/enter_name_et"
        android:minHeight="@dimen/min_et_height" />

    <EditText
        android:id="@+id/enter_contact_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="10"
        android:layout_marginTop="@dimen/padding_15"
        android:background="@drawable/edit_text_sel"
        android:drawableLeft="@drawable/icon_mobile"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/enter_contact_et"
        android:minHeight="@dimen/min_et_height" />

    <EditText
        android:id="@+id/enter_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_15"
        android:background="@drawable/edit_text_sel"
        android:drawableLeft="@drawable/icon_mail"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/email_et"
        android:minHeight="@dimen/min_et_height" />

    <EditText
        android:id="@+id/enter_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_15"
        android:background="@drawable/edit_text_sel"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/password_et"
        android:minHeight="@dimen/min_et_height" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_15"
        android:background="@android:color/holo_red_dark"
        android:text="@string/signup_btn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_17" />
</LinearLayout>
